# lua_integration_template

./: Cargo.toml  README.md  SOURCES.md  justfile
crates/proj/: Cargo.toml
crates/proj/preset/: init.lua
crates/proj/src/: main.rs
crates/proj_core/: Cargo.toml
crates/proj_lua/: Cargo.toml
crates/proj_lua/src/: lib.rs  router.rs
crates/proj_lua/src/proj/: mod.rs  router.rs  templates.rs
crates/proj_macro/: Cargo.toml
crates/proj_macro/src/: lua.rs
crates/proj_web/: Cargo.toml
crates/proj_web/src/: lib.rs
