[workspace]
members = ["crates/proj*"]
# Only check / build main crates by default (check all with `--workspace`)
default-members = []
# exclude = []
resolver = "2"

[workspace.dependencies]
anyhow = "1"
mlua = { version = "0.10.1", features = ["anyhow", "async", "luajit", "send", "userdata-wrappers", "vendored", "serialize"] }
minijinja = { version = "2.5.0", features = ["loader", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
http = "1.1.0"
