[package]
name = "proj"
version = "0.1.0"
edition = "2021"

[dependencies]
proj_lua = { path = "../proj_lua"}
proj_web = { path = "../proj_web"}
proj_macro = { path = "../proj_macro"}

mlua = { workspace = true }
serde = { workspace = true }

axum = "0.8.3"
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
